Fixed bug with 'Programming' title sizing
Was too large on small devices (well: devices that are small in terms of width in pixels - i.e. iPhones)

--- a/css/index.css
+++ b/css/index.css
@@ -235,6 +235,9 @@ nav {
     #programming-list {
         width: 100%;
     }
+  #programmingTitle {
+    font-size: 15vw;
+  }
     #tech-list {
         width: 100%;
     }
